# hass-proflame-connect-wifi

./: .devcontainer.json  .releaserc  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: lint.yml  release.yml
custom_components/proflame_connect_wifi/: __init__.py  client.py  client_base.py  config_flow.py  const.py  light.py  manifest.json  sensor.py  strings.json
custom_components/proflame_connect_wifi/translations/: en.json
scripts/: develop  lint  setup
tests/: test_client.py  test_config_flow.py  test_util.py
