[tool.poetry]
name = "hass-proflame-connect-wifi"
version = "0.0.0"
description = "Proflame Connect Wifi integration for Home Assistant"
authors = ["Pharrox"]
readme = "README.md"
packages = [{include = "custom_components"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
homeassistant = "2024.1.1"
colorlog = "6.7.0"
websockets = "^16.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.292"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
